; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_common.c_hb_video_encoder_is_enabled.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_common.c_hb_video_encoder_is_enabled.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HB_VCODEC_QSV_MASK = common dso_local global i32 0, align 4
@X265_BUILD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @hb_video_encoder_is_enabled to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hb_video_encoder_is_enabled(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %5, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %12, label %9

9:                                                ; preds = %2
  %10 = load i32, i32* %4, align 4
  switch i32 %10, label %11 [
  ]

11:                                               ; preds = %9
  br label %12

12:                                               ; preds = %11, %2
  %13 = load i32, i32* %4, align 4
  switch i32 %13, label %22 [
    i32 134, label %14
    i32 143, label %14
    i32 144, label %14
    i32 138, label %14
    i32 137, label %14
    i32 132, label %15
    i32 133, label %15
  ]

14:                                               ; preds = %12, %12, %12, %12, %12
  store i32 1, i32* %3, align 4
  br label %23

15:                                               ; preds = %12, %12
  %16 = load i32, i32* %4, align 4
  %17 = call i32 @hb_video_encoder_get_depth(i32 %16)
  %18 = call i32* @hb_x264_api_get(i32 %17)
  store i32* %18, i32** %6, align 8
  %19 = load i32*, i32** %6, align 8
  %20 = icmp ne i32* %19, null
  %21 = zext i1 %20 to i32
  store i32 %21, i32* %3, align 4
  br label %23

22:                                               ; preds = %12
  store i32 0, i32* %3, align 4
  br label %23

23:                                               ; preds = %22, %15, %14
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i32* @hb_x264_api_get(i32) #1

declare dso_local i32 @hb_video_encoder_get_depth(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
